infra/k8s/client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iitd-client-service
  namespace: default
  labels:
    app: iitd-client
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: iitd-client
