infra/k8s/client/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iitd-client-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - iitd.example.com
    secretName: iitd-client-tls
  rules:
  - host: iitd.example.com
    http:
      paths:
      - path: /odi_oae_iitd(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: iitd-client-service
            port:
              number: 80
